--- a/app/views/patterns/add-to-a-list/start.html
+++ b/app/views/patterns/add-to-a-list/start.html
@@ -13,7 +13,7 @@
         Members of your household
       </h1>
       <p>
-          We need to know about you and each member of your household.  
+          We need to know about you and each member of your household.  <strong class="govuk-tag red">not finished</strong>
       </p>
       <p>You will be able to:
           <ul class="govuk-list govuk-list--bullet">
