--- a/app/views/forms/housing/members-household/confirmation.html
+++ b/app/views/forms/housing/members-household/confirmation.html
@@ -12,13 +12,26 @@
 
 {% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      {{ govukPanel({
-        titleText: "Submission complete",
-        html: "Your reference number<br><strong>HDJ2123F</strong>"
-      }) }}
+    <div class="govuk-grid-column-full">
+        <div class="govuk-panel govuk-panel--confirmation">
+            <h1 class="govuk-panel__title">
+                Submission complete
+            </h1>
+            <div class="govuk-panel__body">
+              Your reference number
+              <br><strong>1346-7895-4445-7023</strong><br><br>
+              We’ve sent an email to confirm your application to <strong> 
+              {% if data['email'] %}
+              {{ data['email']}}
+              {% else %}
+              applicant.email.address@gmail.com
+              {% endif%}
+              </strong>
+            </div>
+          </div>
 
-      <p>We've sent you a confirmation email.</p>
+
+
 
       <h3 class="govuk-heading-m">What happens next</h3>
 
@@ -26,9 +39,6 @@
         There's nothing more for you to do.
       </p>
 
-      <p>
-        <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
-      </p>
     </div>
   </div>
 {% endblock %}
