--- a/app/views/forms/housing/members-household/member1.html
+++ b/app/views/forms/housing/members-household/member1.html
@@ -12,7 +12,7 @@
       <h1 class="govuk-heading-l">
         Member 1
       </h1>
-    
+      <form class="form" method="post">
       {% from "input/macro.njk" import govukInput %}
 
       {{ govukInput({
@@ -20,7 +20,8 @@
           text: "Their full name"
         },
         id: "full-name-member1",
-        name: "full-name-member1"
+        name: "full-name-member1",
+        value: data['full-name-member1']
       }) }}
 
       {% from "textarea/macro.njk" import govukTextarea %}
@@ -28,6 +29,7 @@
       {{ govukTextarea({
         name: "previous-address-member1",
         id: "previous-address-member1",
+        value: data['previous-address-member1'],
         label: {
           text: "What's their previous address? (if applicable)"
         }
@@ -39,41 +41,98 @@
         },
         id: "relation-member1",
         name: "relation-member1",
+        value: data['relation-member1'],
         classes: "govuk-input--width-20"
       }) }}
 
       {% from "date-input/macro.njk" import govukDateInput %}
+
 
       {{ govukDateInput({
         id: "dob-member1",
         namePrefix: "dob-member1",
         fieldset: {
           legend: {
-            text: "What's their date of birth?",
+            text: "Your date of birth",
+            isPageHeading: true,
             classes: "govuk-fieldset__legend--s"
           }
         },
         hint: {
-          text: "For example, 31 3 1980"
+          text: "For example, 11 08 1980"
+        },
+        items:[
+            {
+            name: 'day',
+            value: data['dob-member1-day'],
+            classes: "govuk-input--width-2"
+            },
+            {
+            name: 'month',
+            value: data['dob-member1-month'],
+            classes: "govuk-input--width-2"
+            },
+            {
+            name: 'year',
+            value: data['dob-member1-year'],
+            classes: "govuk-input--width-4"
+            }
+            ]
+      }) }}
+  
+  
+      {% set genderHtml %}
+      {{ govukInput({
+        id: "gender-desc1",
+        name: "gender-desc1",
+        value: data['gender-desc1'],
+        classes: "govuk-!-width-two-thirds",
+        label: {
+          text: "Describe gender in another way"
         }
+      }) }}
+      {% endset -%}
+  
+  
+      {{ govukRadios({
+        classes: "govuk-radios",
+        idPrefix: "gender-member1",
+        name: "gender-member1",
+        fieldset: {
+          legend: {
+            text: "Your gender",
+            isPageHeading: true,
+            classes: "govuk-fieldset__legend--s"
+          }
+        },
+        items: [
+          {
+            value: "female",
+            text: "Female"
+          },
+          {
+            value: "male",
+            text: "Male"
+          },
+          {
+            value: "Another gender",
+            text: "Another gender",
+            conditional: {
+              html: genderHtml
+            }
+          }
+        ]
       }) }}
 
       {% from "button/macro.njk" import govukButton %}
 
-      {{ govukButton({
-        text: "Add another member",
-        href: "/forms/housing/member2.html",
-        classes: "button-secondary"
-      }) }}
-      <br>
 
       {{ govukButton({
         text: "Continue",
-        href: "/forms/housing/summary.html",
         classes: "button-primary"
       }) }}
 
-
+</form>
     </div>
 </div>
 
