--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -18,8 +18,8 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="education/P1-start.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold">P1 enrolment</a><br>version with modification and feedback following UR testing on the 28/11<br> <strong class="govuk-tag info">last update:</strong>  <strong>28/11 evening</strong></li><br>
-        <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold"> Simplified CBL</a><br> 5 years of addresses still to be done<br><strong class="govuk-tag info">last update:</strong><strong> 29/11 evening</strong></li>
-        <!--li><a href="housing/start.html">a very rough illustration of a form for housing (DRAFT)</a></li-->
+        <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold"> Simplified CBL</a><br> 5 years of addresses still to be done<br><strong class="govuk-tag info">last update:</strong><strong> 2/12 evening</strong></li><br>
+        <li><a href="housing/members-household/start.html" class="govuk-body govuk-!-font-size-27 govuk-!-font-weight-bold">Members of household</a><br>possible version<br> <strong class="govuk-tag info">last update:</strong>  <strong>2/12 evening</strong></li>
       </ul>
 
     </div>
