--- a/app/views/forms/education/declaration1-error.html
+++ b/app/views/forms/education/declaration1-error.html
@@ -38,7 +38,7 @@ Error -  Declaration
               },
               {
                 value: "dec2",
-                text: "The information I’ll give is full and correct"
+                text: "the information I’ll give is full and correct"
               },
               {
                 value: "dec3",
@@ -46,7 +46,7 @@ Error -  Declaration
               },
               {
                 value: "dec4",
-                text: "You won’t process my application unless it’s complete"
+                text: "you won’t process my application unless it’s complete"
               }
             ]
           }) }}
