--- a/app/views/forms/education/postcode.html
+++ b/app/views/forms/education/postcode.html
@@ -21,7 +21,7 @@
       {% from "input/macro.njk" import govukInput %}
      <noscript>
         {{ govukWarningText({
-          text: "JavaScript is disabled on your device. Enable Javascript to apply",
+          text: "JavaScript is blocked on your device. You need to allow JavaScript to start the form. ",
           iconFallbackText: "Warning"
         }) }}
         </noscript>
@@ -40,18 +40,8 @@
         "text": "Find my address"
         }) }}
       </form>
-      <!--p>If you don't have a postcode, please phone the Education Admissions Team on 0141 577 3246 for advice.</p-->
+      <p>For new build homes without a postcode phone us on 0141 577 3246.</p>
 
-    <!--p><a href="manual-address.html">My postcode is not recognised</a></p-->
-    <div class="design-notes-box">
-        <h3 class="govuk-heading-s">Design notes:</h3>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>Has to be an ERC postcode</li>
-          <li>If the address is not found (new houses in ERC), we will have the same message for everyone: <strong>NEW: </strong>"We cannot find your address. Please phone us 0141 577 3246." to see it, enter 'error'</li>
-          <li><strong>If a user has no postcode to enter, we should display a message so they know they should call us</strong></li>
-          <li>We should also have a specific message if the user doesn't have Javascript enabled as they won't be able to go further. <a href="/forms/education/postcode-js.html"><strong>See an example.</strong></a></li>
-        </ul>
-    </div>
     </div>
 </div>
 
