--- a/app/views/forms/education/school-2nd.html
+++ b/app/views/forms/education/school-2nd.html
@@ -27,7 +27,7 @@
               }
             },
             hint: {
-              html: "<p>If you need more information you can <a>read the full admissions policy</a></p>"
+              html: "<p><a>Read the admissions policy on preferred alternative schools</a></p>"
             },
             items: [
               {
