--- a/app/views/forms/education/sibling-stage.html
+++ b/app/views/forms/education/sibling-stage.html
@@ -22,7 +22,7 @@
           name: "sibling-stage",
           fieldset: {
             legend: {
-              text: "What primary will they be in August 2019?",
+              text: "What primary will the sibling be in August 2019?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
@@ -68,12 +68,6 @@
         }) }}
 
         </form>
-        <div class="design-notes-box">
-            <h3 class="govuk-heading-s">Design notes:</h3>
-            <p><strong>New guidance needed</strong></p>
-            <p>Term "they" might be confusing for parents who have more than one kid at school, as they won't be able to enter more than one stage in the list</p>
-            <p></p>
-        </div>
     </div>
 </div>
 
