--- a/app/views/forms/education/sibling.html
+++ b/app/views/forms/education/sibling.html
@@ -22,7 +22,7 @@
         value: data['sibling'],
         fieldset: {
           legend: {
-            text: "Will you have a sibling at the school in August 2019?",
+            text: "Will your child have a sibling at the catchment school in August 2019?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
@@ -44,16 +44,6 @@
         }) }}
 
       </form>
-      <div class="design-notes-box">
-          <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>maybe say will your child have a sibling at the school in August 2019?</p>   
-      </div>
-      <div class="UR-notes-box">
-          <h3 class="govuk-heading-s">User Research notes:</h3>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>sibling is better understood!</li>
-          </ul>
-      </div>
     </div>
 </div>
 
