change typos in the notes

--- a/app/views/forms/housing/CBL5yearsadd.html
+++ b/app/views/forms/housing/CBL5yearsadd.html
@@ -199,7 +199,7 @@
 <div class="content-notes-box">
   <h3 class="govuk-heading-s">Content notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
-      <li>guidance about what we need to be re-drafted and consistent qith the before you start</li>
+      <li>guidance about what we need to be re-drafted and consistent with the before you start</li>
 
   </ul>
 </div>
