--- a/app/views/forms/housing/CBLinfo-housed.html
+++ b/app/views/forms/housing/CBLinfo-housed.html
@@ -52,7 +52,7 @@
 <div class="content-notes-box">
   <h3 class="govuk-heading-s">Content notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
-    <li><strong>Content for this page is only a place holder, it was be re-worded before testing</strong></li>
+    <li><strong>Content for this page is only a place holder, it will be re-worded before testing</strong></li>
     <li>Usability testing will help to see what is needed</li>
     <li>this is a possible information page to add to provide guidance about the pages coming after (info about each person living with the main applicant)</li>
     <li> we could add guidance about the meaning of joint applicant? pregnancy? adult / child status  for 16-18? or put it on the following page when it's relevant?</li>
